adicionei o segundo parágrafo
Segundo parágrafo Lorem

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia molestiae placeat nobis ea delectus corrupti possimus aliquam maiores nihil dolor? Nisi hic a ullam minima, in impedit quisquam ut commodi!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam fugit doloremque quod porro aperiam temporibus, similique totam placeat culpa numquam error a ab. Placeat quos dolorem pariatur nostrum cumque!</p>
 </body>
 </html>
